--- a/.github/workflows/pr-tecton-plan.yml
+++ b/.github/workflows/pr-tecton-plan.yml
@@ -20,7 +20,7 @@ jobs:
         python-version: 3.7.10
 
     - name: Install the Tecton CLI
-      run: pip install 'tecton[pyspark]'
+      run: pip install pypandoc && pip install 'tecton[pyspark]'
 
     - name: Run tecton plan
       run: tecton plan --no-safety-check
