--- a/.github/workflows/tecton-apply.yml
+++ b/.github/workflows/tecton-apply.yml
@@ -1,11 +1,11 @@
 name: Tecton Feature Repo CI/CD
 
 on:
-  pull_request:
+  push:
     branches: [ main ]
 
 jobs:
-  tecton-plan:
+  tecton-apply:
     runs-on: ubuntu-latest
     env:
       TECTON_API_KEY: ${{ secrets.TECTON_API_KEY }}
@@ -23,6 +23,6 @@ jobs:
     - name: Install the Tecton CLI
       run: pip install pypandoc && pip install 'tecton[pyspark]'
 
-    - name: Run tecton plan
-      run: tecton plan --no-safety-check
+    - name: Run tecton apply
+      run: tecton apply --no-safety-check
       working-directory: fraud
